More edits to map

--- a/EP/Quarto_trial.qmd
+++ b/EP/Quarto_trial.qmd
@@ -214,6 +214,7 @@ First, plotting number of publications by country.
 
 ```{r}
 #| echo: false
+#| warning: false
 
 # Summarise data by country
 N_country <- df_all %>% 
@@ -228,6 +229,13 @@ N_country %>%
   ylab("Number of publications") +
   theme_bw() +
   theme(axis.text.x = element_text(angle = 90)) 
+```
+
+Next, plotting the numbers on a map.
+
+```{r}
+#| echo: false
+#| warning: false
 
 # Set tmap to be interactive
 tmap_mode("view")
