--- a/EP/Quarto_trial.qmd
+++ b/EP/Quarto_trial.qmd
@@ -19,6 +19,9 @@ library(writexl)
 library(htmlwidgets)
 library(knitr)
 library(tmap)
+library(leaflet)
+library(leaflet.minicharts)
+library(sf)
 
 # Load Saana's data
 load("D:/Documents/Quarto_training_23Aug2023/LearningQuarto/Data/1_tethys_docs_2023-08-13.Rd")
@@ -255,6 +258,47 @@ World %>%
   tm_polygons("N") 
 ```
 
+Now map distribution of technologies by country.
+
+
+```{r}
+#| echo: false
+#| warning: false
+
+tilesURL <- "http://server.arcgisonline.com/ArcGIS/rest/services/Canvas/World_Light_Gray_Base/MapServer/tile/{z}/{y}/{x}"
+
+N_country_tech <- df_all %>% 
+  drop_na(Country) %>%
+  filter(Marine) %>% 
+  separate_rows(Technology, sep = ",")  %>%
+  mutate_at(vars(Technology), str_trim) %>%
+  filter(Technology != "Wind Energy") %>%
+  filter(Technology != "Marine Energy") %>% 
+  group_by(Country, Technology) %>% 
+  summarise(N = n())
+
+coords <- World %>% 
+  left_join(N_country_tech, 
+            by = c("name" = "Country")) %>% 
+  group_by(name) %>% 
+  mutate(x = st_coordinates(st_centroid(geometry))[, 1],
+         y = st_coordinates(st_centroid(geometry))[, 2]) %>% 
+  pivot_wider(names_from = "Technology",
+              values_from = "N") %>% 
+  mutate_at(20:25, ~replace_na(.,0))
+
+basemap <- leaflet(width = "100%", height = "400px") %>%
+  addTiles(tilesURL)
+basemap %>% 
+  addMinicharts(
+    lng = coords$x, 
+    lat = coords$y,
+    type = "pie",
+    chartdata = as.data.frame(coords[, 20:25])[, 1:5],
+  )
+
+```
+
 ## Statistical analysis: Potential drivers of Scottish funding
 
 Comparing a base model with variables MarineTech, MarMammals, Birds, FishFisheries and Year, with a model that also includes the USTAN binary variable.
@@ -309,3 +353,4 @@ colnames(results) <- c("Model", "Covariate","Estimate", "SE", "z-value","p-value
 kable(results, digit = 3) 
   
 ```
+
